# collatz-conjecture

./: CMakeLists.txt  README.md
src/: main.cpp
src/core/: number.cpp  number.h
